<resources>
    <string name="app_name">Touristo</string>
    <string name="logoName">Touristo</string>
    <string name="logoTheme">Travel Without Limits</string>
    <string name="registerAccount">Doesn\'t Have Any Account? <b>Register Here</b></string>
    <string name="copyRight">© 2023 Touristo. All rights reserved.</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="etEmailLabel">Enter Your Email Address</string>
    <string name="etEmailField">emaple22@gmail.com</string>
    <string name="etPasswordField">************</string>
    <string name="forgot_password"><b>Forgot Password?</b></string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="sign_in_text">Already Have A Account? <b>Sign In Here</b></string>
    <string name="rePasswrdLabel">Re-Enter Your Password</string>
    <string name="telNumberLabel">Enter Your Telephone Number</string>
    <string name="telHint">0772312456</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="openSideNav">open</string>
    <string name="closeSideNav">close</string>
    <string name="admin_log_tv">Are You An Admin ? <b>Click Here</b></string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="act_status">
        <item>Active</item>
        <item>Deactive</item>
    </string-array>

    <string-array name="adminDesignation">
        <item>Admin</item>
        <item>Staff</item>
        <item>Employee</item>
    </string-array>

    <string-array name="villaType">
        <item>Standard</item>
        <item>Deluxe</item>
        <item>UltraDeluxe</item>
    </string-array>

    <string-array name="provinces">
        <item>Western Province</item>
        <item>Central Province</item>
        <item>Southern Province</item>
        <item>Northern Province</item>
        <item>Eastern Province</item>
        <item>North Western Province</item>
        <item>North Central Province</item>
        <item>Uva Province</item>
        <item>Sabaragamuwa Province</item>
    </string-array>

    <string-array name="districts">
        <item>Ampara</item>
        <item>Anuradhapura</item>
        <item>Badulla</item>
        <item>Batticaloa</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Gampaha</item>
        <item>Hambantota</item>
        <item>Jaffna</item>
        <item>Kalutara</item>
        <item>Kandy</item>
        <item>Kegalle</item>
        <item>Kilinochchi</item>
        <item>Kurunegala</item>
        <item>Mannar</item>
        <item>Matale</item>
        <item>Matara</item>
        <item>Monaragala</item>
        <item>Mullaitivu</item>
        <item>Nuwara Eliya</item>
        <item>Polonnaruwa</item>
        <item>Puttalam</item>
        <item>Ratnapura</item>
        <item>Trincomalee</item>
        <item>Vavuniya</item>
    </string-array>



</resources>